@@ -1,7 +1,7 @@
 /*******************************************************************************
- * Copyright (c) 2020 Johannes Kepler University Linz, Primetals Technologies Austria GmbH
- *               2022 Primetals Technologies Austria GmbH
- *               2023 Martin Erich Jobst
+ * Copyright (c) 2020, 2024 Johannes Kepler University Linz, Primetals Technologies Austria GmbH
+ *                          Primetals Technologies Austria GmbH
+ *                          Martin Erich Jobst
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -19,10 +19,11 @@
 package org.eclipse.fordiac.ide.model.errormarker;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.eclipse.core.resources.IMarker;
 import org.eclipse.core.resources.IResource;
@@ -54,6 +55,17 @@ import org.eclipse.fordiac.ide.ui.FordiacLogHelper;
 public final class FordiacMarkerHelper {
 	public static final JobGroup JOB_GROUP = new JobGroup("FordiacMarkerHelper JobGroup", 0, 0); //$NON-NLS-1$
 
+	/**
+	 * Get the human-readable location string for an object.
+	 *
+	 * @param object The object
+	 * @return The location string or an empty string if not applicable
+	 * @see INamedElement#getQualifiedName()
+	 * @implSpec The location string is based on the
+	 *           {@link INamedElement#getQualifiedName()} of the object if it is a
+	 *           {@link INamedElement} or the location of its parent together with
+	 *           the containing feature.
+	 */
 	public static String getLocation(final EObject object) {
 		if (object instanceof final INamedElement namedElement) {
 			return namedElement.getQualifiedName();
@@ -64,6 +76,14 @@ public final class FordiacMarkerHelper {
 		return ""; //$NON-NLS-1$
 	}
 
+	/**
+	 * Get the human-readable location string for an object and feature.
+	 *
+	 * @param object  The object
+	 * @param feature The feature (may be null)
+	 * @return The location string or an empty string if not applicable
+	 * @see #getLocation()
+	 */
 	public static String getLocation(final EObject object, final EStructuralFeature feature) {
 		if (feature != null) {
 			return getLocation(object) + "/" + feature.getName(); //$NON-NLS-1$
@@ -71,6 +91,12 @@ public final class FordiacMarkerHelper {
 		return getLocation(object);
 	}
 
+	/**
+	 * Get the workspace resource for an object
+	 *
+	 * @param object The object
+	 * @return The workspace resource or null if not applicable
+	 */
 	public static IResource getResource(final EObject object) {
 		if (object != null && object.eResource() != null) {
 			final URI uri = EcoreUtil.getURI(object);
@@ -81,6 +107,13 @@ public final class FordiacMarkerHelper {
 		return null;
 	}
 
+	/**
+	 * Get the target URI of an object
+	 *
+	 * @param resource The workspace resource
+	 * @param object   The object
+	 * @return The target URI or null if not applicable
+	 */
 	public static URI getTargetUri(final IResource resource, final EObject object) {
 		if (object != null) {
 			final URI uri = EcoreUtil.getURI(object);
@@ -93,6 +126,13 @@ public final class FordiacMarkerHelper {
 		return null;
 	}
 
+	/**
+	 * Get the target URI of an object as a string
+	 *
+	 * @param resource The workspace resource
+	 * @param object   The object
+	 * @return The target URI string or null if not applicable
+	 */
 	public static String getTargetUriString(final IResource resource, final EObject object) {
 		final URI uri = getTargetUri(resource, object);
 		if (uri != null) {
@@ -101,22 +141,61 @@ public final class FordiacMarkerHelper {
 		return null;
 	}
 
-	public static Object[] getDiagnosticData(final EObject object) {
-		return getDiagnosticData(object, null);
+	/**
+	 * Get the diagnostic data to be used for an object
+	 *
+	 * @param object The object
+	 * @param data   The additional data
+	 * @return The diagnostic data
+	 * @see Diagnostic#getData()
+	 * @see #getDiagnosticData(EObject, EStructuralFeature, String...)
+	 */
+	public static Object[] getDiagnosticData(final EObject object, final String... data) {
+		return getDiagnosticData(object, null, data);
 	}
 
-	public static Object[] getDiagnosticData(final EObject object, final EStructuralFeature feature) {
+	/**
+	 * Get the diagnostic data to be used for an object
+	 *
+	 * @param object  The object
+	 * @param feature The originating feature
+	 * @param data    The additional data
+	 * @return The diagnostic data
+	 * @see Diagnostic#getData()
+	 * @see #getDiagnosticAttributes(Diagnostic)
+	 * @implSpec The diagnostic data follows a specific structure so that it may
+	 *           later be converted to a marker or issue. It consists of:
+	 *           <ul>
+	 *           <li>{@code [0]} the object itself (per EMF convention),
+	 *           <li>{@code [1]} the location for the object using
+	 *           {@link #getLocation(EObject)},
+	 *           <li>{@code [2]} the target URI for the object using
+	 *           {@link #getTargetUriString(IResource, EObject)},
+	 *           <li>{@code [3]} the URI of the {@link EClass} of the object as a
+	 *           string,
+	 *           <li>{@code [4]} the URI of the {@link EStructuralFeature} feature
+	 *           as a string (or null).
+	 *           </ul>
+	 */
+	public static Object[] getDiagnosticData(final EObject object, final EStructuralFeature feature,
+			final String... data) {
 		if (object == null) {
-			return new Object[0];
+			return data;
 		}
-		return new Object[] { object, // [0] object itself (per EMF convention)
+		return Stream.concat(Stream.of(object, // [0] object itself (per EMF convention)
 				getLocation(object), // [1] LOCATION
 				getTargetUriString(null, object), // [2] TARGET_URI
 				EcoreUtil.getURI(object.eClass()).toString(), // [3] TARGET_TYPE
-				feature != null ? EcoreUtil.getURI(feature).toString() : null, // [4] TARGET_FEATURE
-		};
+				feature != null ? EcoreUtil.getURI(feature).toString() : null // [4] TARGET_FEATURE
+		), Stream.of(data)).toArray();
 	}
 
+	/**
+	 * Get the target from the data of a diagnostic
+	 *
+	 * @param diagnostic The diagnostic
+	 * @return The target object or null if not applicable
+	 */
 	public static EObject getDiagnosticTarget(final Diagnostic diagnostic) {
 		final List<?> data = diagnostic.getData();
 		if (data != null && !data.isEmpty() && data.get(0) instanceof final EObject target) {
@@ -125,20 +204,43 @@ public final class FordiacMarkerHelper {
 		return null;
 	}
 
+	/**
+	 * Get the marker attributes for a diagnostic
+	 *
+	 * @param diagnostic The diagnostic
+	 * @return The marker attributes
+	 */
 	public static Map<String, Object> getDiagnosticAttributes(final Diagnostic diagnostic) {
 		if (LibraryElementValidator.DIAGNOSTIC_SOURCE.equals(diagnostic.getSource())) {
 			final List<?> data = diagnostic.getData();
 			if (data != null && data.size() >= 5) {
 				if (data.get(4) != null) {
-					return Map.of(IMarker.LOCATION, data.get(1), FordiacErrorMarker.TARGET_URI, data.get(2),
-							FordiacErrorMarker.TARGET_TYPE, data.get(3), FordiacErrorMarker.TARGET_FEATURE,
-							data.get(4));
+					return Map.of(//
+							FordiacErrorMarker.CODE, Integer.valueOf(diagnostic.getCode()), //
+							FordiacErrorMarker.SOURCE, diagnostic.getSource(), //
+							IMarker.LOCATION, data.get(1), //
+							FordiacErrorMarker.TARGET_URI, data.get(2), //
+							FordiacErrorMarker.TARGET_TYPE, data.get(3), //
+							FordiacErrorMarker.TARGET_FEATURE, data.get(4), //
+							FordiacErrorMarker.DATA, data.subList(5, data.size()).stream().map(Object::toString)
+									.collect(Collectors.joining("\u0000")) //$NON-NLS-1$
+					);
 				}
-				return Map.of(IMarker.LOCATION, data.get(1), FordiacErrorMarker.TARGET_URI, data.get(2),
-						FordiacErrorMarker.TARGET_TYPE, data.get(3));
+				return Map.of(//
+						FordiacErrorMarker.CODE, Integer.valueOf(diagnostic.getCode()), //
+						FordiacErrorMarker.SOURCE, diagnostic.getSource(), //
+						IMarker.LOCATION, data.get(1), //
+						FordiacErrorMarker.TARGET_URI, data.get(2), //
+						FordiacErrorMarker.TARGET_TYPE, data.get(3), //
+						FordiacErrorMarker.DATA, data.subList(5, data.size()).stream().map(Object::toString)
+								.collect(Collectors.joining("\u0000")) //$NON-NLS-1$
+				);
 			}
 		}
-		return Collections.emptyMap();
+		return Map.of(//
+				FordiacErrorMarker.CODE, Integer.valueOf(diagnostic.getCode()), //
+				FordiacErrorMarker.SOURCE, diagnostic.getSource()//
+		);
 	}
 
 	public static List<IMarker> findMarkers(final EObject target) {
